--- a/TestMvc/Properties/launchSettings.json
+++ b/TestMvc/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:33159",
-      "sslPort": 44351
+      "applicationUrl": "http://localhost:47413",
+      "sslPort": 44397
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "RazorPagesMovie": {
+    "TestMvc": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
