--- a/BCSHotels/BCSHotels.csproj
+++ b/BCSHotels/BCSHotels.csproj
@@ -182,6 +182,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\BCSHotelsDb.mdf" />
+    <Content Include="App_Data\BCSHotelsDb_log.ldf">
+      <DependentUpon>BCSHotelsDb.mdf</DependentUpon>
+    </Content>
     <Content Include="App_Readme\Elmah.txt" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -245,9 +249,7 @@
     <Content Include="Views\Home\List.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
