--- a/src/FineHotels/FineHotelsApp/FineHotelsApp.csproj
+++ b/src/FineHotels/FineHotelsApp/FineHotelsApp.csproj
@@ -4,21 +4,19 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>aspnet-FineHotelsWeb-acb63f2f-af84-4591-9cdc-f439706c75e8</UserSecretsId>
+    <UserSecretsId>aspnet-FineHotelsApp-cc541105-c0fb-44ba-957d-2628d26c9852</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\FineHotelsDb\FineHotelsDb.csproj" />
-    <ProjectReference Include="..\FineHotelsDomain\FineHotelsDomain.csproj" />
   </ItemGroup>
 
 </Project>
