--- a/src/FineHotels/FineHotelsApp/appsettings.json
+++ b/src/FineHotels/FineHotelsApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "..\\FineHotelsDb\\Db\\FineHotelsDb.db"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared"
   },
   "Logging": {
     "LogLevel": {
